y.output

state 0
	$accept: .main $end 
	opt_directive: .    (2)

	Directive  shift 3
	.  reduce 2 (src line 41)

	main  goto 1
	opt_directive  goto 2

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  opt_directive.invoke 

	Procedure  shift 6
	Function  shift 5
	.  error

	invoke  goto 4

state 3
	opt_directive:  Directive.EOL 

	'\n'  shift 8
	.  error

	EOL  goto 7

state 4
	main:  opt_directive invoke.    (1)

	.  reduce 1 (src line 38)


state 5
	invoke:  Function.Identifier '(' exprs ')' opt_export opt_stmt EndFunction opt_EOLs 

	Identifier  shift 9
	.  error


state 6
	invoke:  Procedure.Identifier '(' exprs ')' opt_export opt_stmt EndProcedure opt_EOLs 

	Identifier  shift 10
	.  error


state 7
	opt_directive:  Directive EOL.    (3)

	.  reduce 3 (src line 42)


state 8
	EOL:  '\n'.    (53)

	.  reduce 53 (src line 148)


state 9
	invoke:  Function Identifier.'(' exprs ')' opt_export opt_stmt EndFunction opt_EOLs 

	'('  shift 11
	.  error


state 10
	invoke:  Procedure Identifier.'(' exprs ')' opt_export opt_stmt EndProcedure opt_EOLs 

	'('  shift 12
	.  error


state 11
	invoke:  Function Identifier '('.exprs ')' opt_export opt_stmt EndFunction opt_EOLs 
	exprs: .    (45)

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  reduce 45 (src line 118)

	exprs  goto 13
	expr  goto 14

state 12
	invoke:  Procedure Identifier '('.exprs ')' opt_export opt_stmt EndProcedure opt_EOLs 
	exprs: .    (45)

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  reduce 45 (src line 118)

	exprs  goto 22
	expr  goto 14

state 13
	invoke:  Function Identifier '(' exprs.')' opt_export opt_stmt EndFunction opt_EOLs 
	exprs:  exprs.',' opt_EOLs expr 

	')'  shift 23
	','  shift 24
	.  error


state 14
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	exprs:  expr.    (46)

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 46 (src line 119)


state 15
	expr:  Identifier.    (25)
	expr:  Identifier.'=' expr 
	expr:  Identifier.'(' exprs ')' 

	'('  shift 37
	.  reduce 25 (src line 96)


state 16
	expr:  '('.expr ')' 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 38

state 17
	expr:  String.    (32)

	.  reduce 32 (src line 103)


state 18
	expr:  Number.    (33)

	.  reduce 33 (src line 104)


state 19
	expr:  True.    (34)

	.  reduce 34 (src line 105)


state 20
	expr:  False.    (35)

	.  reduce 35 (src line 106)


state 21
	expr:  Undefind.    (36)

	.  reduce 36 (src line 107)


state 22
	invoke:  Procedure Identifier '(' exprs.')' opt_export opt_stmt EndProcedure opt_EOLs 
	exprs:  exprs.',' opt_EOLs expr 

	')'  shift 39
	','  shift 24
	.  error


state 23
	invoke:  Function Identifier '(' exprs ')'.opt_export opt_stmt EndFunction opt_EOLs 
	opt_export: .    (4)

	Export  shift 41
	.  reduce 4 (src line 45)

	opt_export  goto 40

state 24
	exprs:  exprs ','.opt_EOLs expr 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 42
	EOLs  goto 43

state 25
	expr:  expr '+'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 45

state 26
	expr:  expr '-'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 46

state 27
	expr:  expr '*'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 47

state 28
	expr:  expr '/'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 48

state 29
	expr:  expr '%'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 49

state 30
	expr:  expr '>'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 50

state 31
	expr:  expr '<'.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 51

state 32
	expr:  expr '='.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 52

state 33
	expr:  expr NeEq.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 53

state 34
	expr:  expr And.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 54

state 35
	expr:  expr Or.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 55

state 36
	expr:  Identifier '='.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 56

state 37
	expr:  Identifier '('.exprs ')' 
	exprs: .    (45)

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  reduce 45 (src line 118)

	exprs  goto 57
	expr  goto 14

state 38
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	')'  shift 58
	.  error


state 39
	invoke:  Procedure Identifier '(' exprs ')'.opt_export opt_stmt EndProcedure opt_EOLs 
	opt_export: .    (4)

	Export  shift 41
	.  reduce 4 (src line 45)

	opt_export  goto 59

state 40
	invoke:  Function Identifier '(' exprs ')' opt_export.opt_stmt EndFunction opt_EOLs 
	opt_stmt: .    (8)
	opt_EOLs: .    (49)

	EndFunction  reduce 8 (src line 54)
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_stmt  goto 60
	opt_EOLs  goto 61
	EOLs  goto 62

state 41
	opt_export:  Export.    (5)

	.  reduce 5 (src line 46)


state 42
	exprs:  exprs ',' opt_EOLs.expr 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 63

state 43
	opt_EOLs:  EOLs.    (50)
	EOLs:  EOLs.EOL 

	'\n'  shift 8
	.  reduce 50 (src line 142)

	EOL  goto 64

state 44
	EOLs:  EOL.    (51)

	.  reduce 51 (src line 145)


state 45
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (27)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 27 (src line 98)


state 46
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (28)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 28 (src line 99)


state 47
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (29)
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	.  reduce 29 (src line 100)


state 48
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (30)
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	.  reduce 30 (src line 101)


state 49
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (31)
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	.  reduce 31 (src line 102)


state 50
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr '>' expr.    (37)
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 37 (src line 108)


state 51
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr '<' expr.    (38)
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 38 (src line 109)


state 52
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr '=' expr.    (39)
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 39 (src line 110)


state 53
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr NeEq expr.    (41)
	expr:  expr.And expr 
	expr:  expr.Or expr 

	NeEq  error
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 41 (src line 112)


state 54
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr And expr.    (42)
	expr:  expr.Or expr 

	NeEq  shift 33
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 42 (src line 113)


state 55
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	expr:  expr Or expr.    (43)

	NeEq  shift 33
	And  shift 34
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 43 (src line 114)


state 56
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  Identifier '=' expr.    (40)
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 40 (src line 111)


state 57
	expr:  Identifier '(' exprs.')' 
	exprs:  exprs.',' opt_EOLs expr 

	')'  shift 65
	','  shift 24
	.  error


state 58
	expr:  '(' expr ')'.    (26)

	.  reduce 26 (src line 97)


state 59
	invoke:  Procedure Identifier '(' exprs ')' opt_export.opt_stmt EndProcedure opt_EOLs 
	opt_stmt: .    (8)
	opt_EOLs: .    (49)

	EndProcedure  reduce 8 (src line 54)
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_stmt  goto 66
	opt_EOLs  goto 61
	EOLs  goto 62

state 60
	invoke:  Function Identifier '(' exprs ')' opt_export opt_stmt.EndFunction opt_EOLs 

	EndFunction  shift 67
	.  error


state 61
	opt_stmt:  opt_EOLs.stmts 

	Identifier  shift 15
	If  shift 75
	Break  shift 71
	Continue  shift 72
	Number  shift 18
	String  shift 17
	Throw  shift 70
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	stmt  goto 69
	stmts  goto 68
	expr  goto 73
	stmt_if  goto 74

state 62
	opt_stmt:  EOLs.    (10)
	opt_EOLs:  EOLs.    (50)
	EOLs:  EOLs.EOL 

	EndProcedure  reduce 10 (src line 56)
	ElseIf  reduce 10 (src line 56)
	Else  reduce 10 (src line 56)
	EndIf  reduce 10 (src line 56)
	EndFunction  reduce 10 (src line 56)
	'\n'  shift 8
	.  reduce 50 (src line 142)

	EOL  goto 64

state 63
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	exprs:  exprs ',' opt_EOLs expr.    (47)

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 47 (src line 120)


state 64
	EOLs:  EOLs EOL.    (52)

	.  reduce 52 (src line 146)


state 65
	expr:  Identifier '(' exprs ')'.    (44)

	.  reduce 44 (src line 115)


state 66
	invoke:  Procedure Identifier '(' exprs ')' opt_export opt_stmt.EndProcedure opt_EOLs 

	EndProcedure  shift 76
	.  error


state 67
	invoke:  Function Identifier '(' exprs ')' opt_export opt_stmt EndFunction.opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 77
	EOLs  goto 43

state 68
	opt_stmt:  opt_EOLs stmts.    (9)
	stmts:  stmts.stmt end_stmt opt_EOLs 

	Identifier  shift 15
	If  shift 75
	Break  shift 71
	Continue  shift 72
	Number  shift 18
	String  shift 17
	Throw  shift 70
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  reduce 9 (src line 55)

	stmt  goto 78
	expr  goto 73
	stmt_if  goto 74

state 69
	stmts:  stmt.end_stmt opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 80
	EOLs  goto 43
	end_stmt  goto 79

state 70
	stmt:  Throw.throw_terms 
	opt_EOLs: .    (49)

	String  shift 83
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 80
	EOLs  goto 43
	end_stmt  goto 82
	throw_terms  goto 81

state 71
	stmt:  Break.    (14)

	.  reduce 14 (src line 65)


state 72
	stmt:  Continue.    (15)

	.  reduce 15 (src line 66)


state 73
	stmt:  expr.    (16)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  reduce 16 (src line 67)


state 74
	stmt:  stmt_if.    (17)

	.  reduce 17 (src line 68)


state 75
	stmt_if:  If.expr Then opt_stmt opt_elseif_list opt_else EndIf 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 84

state 76
	invoke:  Procedure Identifier '(' exprs ')' opt_export opt_stmt EndProcedure.opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 85
	EOLs  goto 43

state 77
	invoke:  Function Identifier '(' exprs ')' opt_export opt_stmt EndFunction opt_EOLs.    (6)

	.  reduce 6 (src line 50)


state 78
	stmts:  stmts stmt.end_stmt opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 80
	EOLs  goto 43
	end_stmt  goto 86

state 79
	stmts:  stmt end_stmt.opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 87
	EOLs  goto 43

state 80
	end_stmt:  opt_EOLs.semi 

	';'  shift 89
	.  error

	semi  goto 88

state 81
	stmt:  Throw throw_terms.    (13)

	.  reduce 13 (src line 64)


state 82
	throw_terms:  end_stmt.    (18)

	.  reduce 18 (src line 71)


state 83
	throw_terms:  String.end_stmt 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 80
	EOLs  goto 43
	end_stmt  goto 90

state 84
	stmt_if:  If expr.Then opt_stmt opt_elseif_list opt_else EndIf 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	Then  shift 91
	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  error


state 85
	invoke:  Procedure Identifier '(' exprs ')' opt_export opt_stmt EndProcedure opt_EOLs.    (7)

	.  reduce 7 (src line 51)


state 86
	stmts:  stmts stmt end_stmt.opt_EOLs 
	opt_EOLs: .    (49)

	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_EOLs  goto 92
	EOLs  goto 43

state 87
	stmts:  stmt end_stmt opt_EOLs.    (11)

	.  reduce 11 (src line 59)


state 88
	end_stmt:  opt_EOLs semi.    (48)

	.  reduce 48 (src line 138)


state 89
	semi:  ';'.    (54)

	.  reduce 54 (src line 149)


state 90
	throw_terms:  String end_stmt.    (19)

	.  reduce 19 (src line 72)


state 91
	stmt_if:  If expr Then.opt_stmt opt_elseif_list opt_else EndIf 
	opt_stmt: .    (8)
	opt_EOLs: .    (49)

	ElseIf  reduce 8 (src line 54)
	Else  reduce 8 (src line 54)
	EndIf  reduce 8 (src line 54)
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_stmt  goto 93
	opt_EOLs  goto 61
	EOLs  goto 62

state 92
	stmts:  stmts stmt end_stmt opt_EOLs.    (12)

	.  reduce 12 (src line 60)


state 93
	stmt_if:  If expr Then opt_stmt.opt_elseif_list opt_else EndIf 
	opt_elseif_list: .    (21)

	ElseIf  shift 95
	.  reduce 21 (src line 83)

	opt_elseif_list  goto 94

state 94
	stmt_if:  If expr Then opt_stmt opt_elseif_list.opt_else EndIf 
	opt_else: .    (23)

	Else  shift 97
	.  reduce 23 (src line 89)

	opt_else  goto 96

state 95
	opt_elseif_list:  ElseIf.expr Then opt_stmt opt_elseif_list 

	Identifier  shift 15
	Number  shift 18
	String  shift 17
	True  shift 19
	False  shift 20
	Undefind  shift 21
	'('  shift 16
	.  error

	expr  goto 98

state 96
	stmt_if:  If expr Then opt_stmt opt_elseif_list opt_else.EndIf 

	EndIf  shift 99
	.  error


state 97
	opt_else:  Else.opt_stmt 
	opt_stmt: .    (8)
	opt_EOLs: .    (49)

	EndIf  reduce 8 (src line 54)
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_stmt  goto 100
	opt_EOLs  goto 61
	EOLs  goto 62

state 98
	opt_elseif_list:  ElseIf expr.Then opt_stmt opt_elseif_list 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.'=' expr 
	expr:  expr.NeEq expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 

	Then  shift 101
	NeEq  shift 33
	Or  shift 35
	And  shift 34
	'='  shift 32
	'>'  shift 30
	'<'  shift 31
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'%'  shift 29
	.  error


state 99
	stmt_if:  If expr Then opt_stmt opt_elseif_list opt_else EndIf.    (20)

	.  reduce 20 (src line 77)


state 100
	opt_else:  Else opt_stmt.    (24)

	.  reduce 24 (src line 90)


state 101
	opt_elseif_list:  ElseIf expr Then.opt_stmt opt_elseif_list 
	opt_stmt: .    (8)
	opt_EOLs: .    (49)

	ElseIf  reduce 8 (src line 54)
	Else  reduce 8 (src line 54)
	EndIf  reduce 8 (src line 54)
	'\n'  shift 8
	.  reduce 49 (src line 141)

	EOL  goto 44
	opt_stmt  goto 102
	opt_EOLs  goto 61
	EOLs  goto 62

state 102
	opt_elseif_list:  ElseIf expr Then opt_stmt.opt_elseif_list 
	opt_elseif_list: .    (21)

	ElseIf  shift 95
	.  reduce 21 (src line 83)

	opt_elseif_list  goto 103

state 103
	opt_elseif_list:  ElseIf expr Then opt_stmt opt_elseif_list.    (22)

	.  reduce 22 (src line 84)


52 terminals, 19 nonterminals
55 grammar rules, 104/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
68 working sets used
memory: parser 100/240000
53 extra closures
327 shift entries, 16 exceptions
65 goto entries
28 entries saved by goto default
Optimizer space used: output 240/240000
240 table entries, 54 zero
maximum spread: 52, maximum offset: 102
